# borlang

./: .gitignore  Cargo.toml  README.md  build.rs  example.borlang  generate_parser.sh
e2e/: test_assertions.borlang  test_misc.borlang
lib/: std.borlang
lib/std/: assert.borlang  ops.borlang  prelude.borlang
src/: ast.rs  compiler.rs  eval_error.rs  evaluator.rs  intrinsic.rs  lib.rs  main.rs  module.rs  parser.rs  parser_impl.rs  runtime.rs  syntax.rs  value.rs
tests/: e2e.rs
tree-sitter-borlang/: expr_grammar.js  grammar.js  package-lock.json  package.json  program_grammar.js  rules.js  tsconfig.json  util.js
tree-sitter-borlang-expr/: grammar.js  package-lock.json  package.json
