[package]
name = "borlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc = { version = "0.5.0", features = ["derive"] }
rustyline = "13.0.0"
tree-sitter = "0.21.0"

[build-dependencies]
cc="*"

[dev-dependencies]
color-backtrace = "0.6.1"
ctor = "0.2.7"
pretty_assertions = "1.4.0"
