[package]
name = "borlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc = { version = "0.5.0", features = ["derive"] }
regex = "1.10.3"
rustyline = "13.0.0"
tree-sitter = "0.20.10"
serde_tree_sitter = {git = "https://github.com/todesking/serde_tree_sitter"}
serde = {version = "1.0.197", features = ["derive"]}
thiserror = "1.0.58"

[build-dependencies]
cc="*"

[dev-dependencies]
color-backtrace = "0.6.1"
ctor = "0.2.7"
pretty_assertions = "1.4.0"
